# rylv-metrics

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: collector_compare.rs  lookup_compare.rs  sync_collector.rs  sync_collector_old.rs  thread_local_compare.rs
examples/: basic.rs  counters.rs  custom_writer.rs  gauges.rs  histogram_macro.rs  multithreaded.rs  prepared_metric_shared.rs  shared_basic.rs  shared_runtime_retry.rs  sorted_tags.rs  sorted_tags_tls.rs  sorted_tags_udp.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_metric_collector.rs  fuzz_metric_names.rs  fuzz_numeric_values.rs  fuzz_packet_limits.rs  fuzz_tags.rs
src/: error.rs  lib.rs  main.rs
src/bins/: shared_dhat_multi.rs  shared_dhat_single.rs
src/dogstats/: aggregator.rs  collector.rs  collector_udp.rs  histogram_config.rs  job.rs  macros.rs  mod.rs  net.rs  slice_utils.rs  sorted_tags.rs  writer.rs  writer_utils.rs
src/dogstats/aggregator/: mod.rs  shared.rs
src/dogstats/collector/: mod.rs  shared_collector.rs  tls_collector.rs
tests/: miri_test.rs
tests/integration/: custom_writer.rs  failure_scenarios.rs  histogram_macro.rs  mod.rs  parallel_stress.rs  shared_collector.rs  sync_collector.rs  tls_hashbrown.rs
